[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-intermediate-inflammation"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "docformatter>=1.7.7",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]

[tool.setuptools]
packages = ["inflammation"]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "A", "B", "SIM", "I"]

[tool.uv]
resolution = "highest"
override-dependencies = [
    "contourpy==1.3.2",
    "numpy<2.3"
    ]



